<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.421">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/id"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_id"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:hint="@string/id"
                android:textSize="30sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nombre" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_telefono"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/telefono" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/direccion"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_direccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/direccion" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/et_correo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/correo" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/btn_agregar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_green_dark"
                android:onClick="addClient"
                android:text="@string/agregar"
                android:textColor="@android:color/background_light" />

            <Button
                android:id="@+id/btn_buscar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_light"
                android:onClick="findClient"
                android:text="@string/buscar" />

            <Button
                android:id="@+id/btn_eliminar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_red_dark"
                android:onClick="deleteClient"
                android:text="@string/eliminar"
                android:textColor="@android:color/background_light" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>